	serve as fallback if no entry with the
	correct type is found
	* man/C/dpkg-source.1: Document new -t
	switch for dpkg-shlibdeps

2005-10-11  Frank Lichtenheld  <djpig@debian.org>

	* man/C/*.[158]: Update references to dpkg and dselect
	man pages with correct section (8->1)
	* man/C/dselect.1: Update reference to debconf
	man page with correct section (8->1)

2005-10-07  Frank Lichtenheld  <djpig@debian.org>

	* scripts/controllib.pl:
	(checkversion) add generic check for valid version numbers
	(checkpackagename) add generic check for valid package
	names
	(readmd5sum) add generic function to extract md5sum from
	md5sum program output. This also fixes the handling
	of md5sum -b output in dpkg-source
	(setsourcepackage) call checkpackagename on new value
	* scripts/dpkg-source.pl: Use the new checks added to
	controllib to ensure validity of version and packagename
	on build, too. Previously this was only done on
	unpack.

	* scripts/dpkg-source.pl: Test on build if directories
	added by diff already exist with other type in the original
	source since we already tested that on unpack.

	* scripts/dpkg-source.pl (addfile): Test if files are added
	twice. Should not happen but as we error out on unpack
	better make sure it doesn't.

2005-10-04  Frank Lichtenheld  <djpig@debian.org>
 
	* scripts/dpkg-source.pl: Check build relation
	fields for correctness before putting them into
	the .dsc when building. This also normalizes the
	fields.
 
2005-10-03  Matt Zimmerman  <mdz@debian.org>,
	    Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-source.pl: If gpg is installed, check
	the signature of the .dsc file before unpacking.
	Allow the unpacking to suceed if the .dsc is unsigned
	but error out if the signature is bad. If gpg exits
	with a code >2 (e.g. missing key), show the user the gpg
	output but continue.

2005-10-03  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-source.pl: Try to chown files extracted from