@@ -27,6 +27,8 @@ dpkg (1.13.12~) unstable; urgency=low
   * Fix man page references to dpkg and dselect man pages. Many
     of them still had a wrong section.
     Closes: #332826
+  * Let dpkg-source -b warn about special permissions of files added
+    in the diff since these will get lost. Closes: #306125
 
  --
 
